--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,13 +1,11 @@
 
 //importar submodulos
+@import "variables";
 @import "header";
-
 @import "main-index";
-
+@import "tienda";
+@import "cursos";
+@import "acerca";
+@import "contacto";
 @import "footer";
-
-
-
-
-
-
+@import "media-queries";
